<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.singlescreenapp.MainActivity"
    android:orientation="vertical">

    <ImageView
        android:src="@drawable/gym"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:layout_width="wrap_content"
        android:id="@+id/imageView" />

    <TextView
        style="@style/title"
        android:id="@+id/textView"
        android:text="@string/title" />

    <LinearLayout style="@style/infoArea">

        <TextView
            style="@style/location"
            android:id="@+id/location"
            android:text="@string/location" />

        <TextView
            android:id="@+id/phone"
            android:text="@string/phone"
            style="@style/phone" />

        <TextView
            android:id="@+id/fax"
            android:text="@string/fax"
            style="@style/fax" />

        <TextView
            android:id="@+id/mail"
            android:text="@string/mail"
            style="@style/mail" />

    </LinearLayout>

    <TextView
        android:text="@string/description"
        style="@style/description"/>
</LinearLayout>
